--- a/public_html/symfony/.env
+++ b/public_html/symfony/.env
@@ -25,16 +25,13 @@ APP_SECRET=e293db315e6e47e99e37dbd0954760c8
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
+#DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
+DATABASE_URL="//symfony:apassword28@127.0.0.1:3306/symfony?serverVersion=mariadb-10.4.14"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=sendgrid://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@default
 ###< symfony/mailer ###
-
-###> symfony/sendgrid-mailer ###
-# MAILER_DSN=sendgrid://KEY@default
-###< symfony/sendgrid-mailer ###
 
 ###> hwi/oauth-bundle ###
 FB_ID=
