--- a/public_html/symfony/.env
+++ b/public_html/symfony/.env
@@ -20,20 +20,27 @@ APP_SECRET=e293db315e6e47e99e37dbd0954760c8
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-#
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-#DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
-DATABASE_URL="//symfony:apassword28@127.0.0.1:3306/symfony?serverVersion=mariadb-10.4.14"
+DB_USER=symfony
+DB_PASSWORD=apassword28
+DB_NAME=symfony
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_VERSION=mariadb-10.4.14
+DATABASE_URL="//${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?serverVersion=${DB_VERSION}"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=sendgrid://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@default
+SENDGRID_API_KEY=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
+MAILER_DSN=sendgrid://${SENDGRID_API_KEY}@default
 ###< symfony/mailer ###
 
 ###> hwi/oauth-bundle ###
 FB_ID=
 FB_SECRET=
+
+GOOGLE_ID=
+GOOGLE_SECRET=
+
+APPLE_ID=
+APPLE_SECRET=
 ###< hwi/oauth-bundle ###
