--- a/public_html/symfony/.env
+++ b/public_html/symfony/.env
@@ -29,6 +29,13 @@ DB_VERSION=mariadb-10.4.14
 DATABASE_URL="//${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?serverVersion=${DB_VERSION}"
 ###< doctrine/doctrine-bundle ###
 
+###> redis ###
+REDIS_CLIENT=predis
+REDIS_HOST="127.0.0.1"
+REDIS_PORT=6379
+REDIS_PASSWORD=""
+###< redis ###
+
 ###> symfony/mailer ###
 SENDGRID_API_KEY=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
 MAILER_DSN=sendgrid://${SENDGRID_API_KEY}@default
@@ -44,3 +51,8 @@ GOOGLE_SECRET=
 APPLE_ID=
 APPLE_SECRET=
 ###< hwi/oauth-bundle ###
+
+###> snc/redis-bundle ###
+# passwords that contain special characters (@, %, :, +) must be urlencoded
+REDIS_URL=redis://localhost
+###< snc/redis-bundle ###
