--- a/public_html/symfony/composer.json
+++ b/public_html/symfony/composer.json
@@ -14,7 +14,9 @@
         "hwi/oauth-bundle": "^1.4",
         "nyholm/psr7": "^1.5",
         "php-http/httplug-bundle": "^1.27",
+        "predis/predis": "^1.0",
         "sensio/framework-extra-bundle": "^6.2",
+        "snc/redis-bundle": "^4.3",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
