--- a/public_html/symfony/config/packages/cache.yaml
+++ b/public_html/symfony/config/packages/cache.yaml
@@ -10,7 +10,9 @@ framework:
         # Redis
         #app: cache.adapter.redis
         #default_redis_provider: redis://localhost
-
+        prefix_seed: agaktr/pointlocals
+        app: cache.adapter.redis
+        default_redis_provider: snc_redis.default
         # APCu (not recommended with heavy random-write workloads as memory fragmentation can cause perf issues)
         #app: cache.adapter.apcu
 
