--- a/public_html/symfony/config/packages/security.yaml
+++ b/public_html/symfony/config/packages/security.yaml
@@ -22,6 +22,9 @@ security:
             lazy: true
             provider: app_user_provider
             custom_authenticator: App\Security\SecurityAuthenticator
+            json_login:
+                # api_login is a route we will create below
+                check_path: app_api_login
             logout:
                 path: app_logout
                 # where to redirect after logout
